some changes after a long time

--- a/_includes/web-resume-02.html
+++ b/_includes/web-resume-02.html
@@ -76,7 +76,7 @@
     <div class="resume_item resume_about">
         <div class="title">
 					<p class="bold" style="font-size:35px;">Nazmul Islam Ananto</p><br><br>
-					<p class="regular" style="font-size:20px;"> 1st Year Undergraduate, CSE, BUET </p>
+					<p class="regular" style="font-size:20px;"> 2nd Year Undergraduate, CSE, BUET </p>
          </div>
     </div>
 		<div class="resume_item resume_education">
@@ -89,7 +89,7 @@
 								<div class="date">2019-2022 &emsp;&nbsp;&nbsp;</div>
 								<div class="info">
 										 <p class="semi-bold">Computer Science and Engineering<br> Bangladesh University of Engineering and Technology</p>
-									<p>Enrolled in BS Program <br> Currently in 2nd Semester (3.98 CGPA)</p>
+									<p>Enrolled in BS Program <br> Currently in 4th Semester</p>
 								</div>
 						</li>
 						<li>
@@ -119,45 +119,54 @@
 				  C/C++
 				</div>
 				<div class="skill_progress" >
+				  <span style="width: 96%;"></span>
+				</div>
+				<div class="skill_per">96%</div>
+			  </li>
+			  <li>
+				<div class="skill_name">
+				  Java
+				</div>
+				<div class="skill_progress">
 				  <span style="width: 95%;"></span>
 				</div>
 				<div class="skill_per">95%</div>
 			  </li>
+        <li>
+          <div class="skill_name">
+            Python
+          </div>
+          <div class="skill_progress">
+            <span style="width: 70%;"></span>
+          </div>
+          <div class="skill_per">70%</div>
+          </li>
 			  <li>
 				<div class="skill_name">
-				  Python
+				  Web Development (Node, Express & React)
 				</div>
 				<div class="skill_progress">
-				  <span style="width: 80%;"></span>
+				  <span style="width: 85%;"></span>
 				</div>
-				<div class="skill_per">80%</div>
-			  </li>
-			  <li>
-				<div class="skill_name">
-				  Web Development
-				</div>
-				<div class="skill_progress">
-				  <span style="width: 60%;"></span>
-				</div>
-				<div class="skill_per">60%</div>
+				<div class="skill_per">85%</div>
 			  </li>
 			  <li>
 				  <div class="skill_name">
 				  UI/UX Designing
 				  </div>
 				  <div class="skill_progress">
-					<span style="width: 45%;"></span>
+					<span style="width: 55%;"></span>
 				  </div>
-				  <div class="skill_per">45%</div>
+				  <div class="skill_per">55%</div>
 			  </li>
 			  <li>
 				<div class="skill_name">
 				  Data Structure
 				</div>
 				<div class="skill_progress">
-				  <span style="width: 40%;"></span>
+				  <span style="width: 97%;"></span>
 				</div>
-				<div class="skill_per">40%</div>
+				<div class="skill_per">97%</div>
 			  </li>
 			  <li>
 				<div class="skill_name">
