changed resume a bit

--- a/_includes/web-resume-02.html
+++ b/_includes/web-resume-02.html
@@ -76,7 +76,7 @@
     <div class="resume_item resume_about">
         <div class="title">
 					<p class="bold" style="font-size:35px;">Nazmul Islam Ananto</p><br><br>
-					<p class="regular" style="font-size:20px;"> 2nd Year Undergraduate, CSE, BUET </p>
+					<p class="regular" style="font-size:20px;"> 3rd Year Undergraduate, CSE, BUET </p>
          </div>
     </div>
 		<div class="resume_item resume_education">
@@ -89,7 +89,7 @@
 								<div class="date">2019-2022 &emsp;&nbsp;&nbsp;</div>
 								<div class="info">
 										 <p class="semi-bold">Computer Science and Engineering<br> Bangladesh University of Engineering and Technology</p>
-									<p>Enrolled in BS Program <br> Currently in 4th Semester</p>
+									<p>Enrolled in BS Program <br> Currently in 5th Semester</p>
 								</div>
 						</li>
 						<li>
@@ -119,18 +119,18 @@
 				  C/C++
 				</div>
 				<div class="skill_progress" >
-				  <span style="width: 96%;"></span>
+				  <span style="width: 92%;"></span>
 				</div>
-				<div class="skill_per">96%</div>
+				<div class="skill_per">92%</div>
 			  </li>
 			  <li>
 				<div class="skill_name">
 				  Java
 				</div>
 				<div class="skill_progress">
-				  <span style="width: 95%;"></span>
+				  <span style="width: 90%;"></span>
 				</div>
-				<div class="skill_per">95%</div>
+				<div class="skill_per">90%</div>
 			  </li>
         <li>
           <div class="skill_name">
@@ -146,46 +146,37 @@
 				  Web Development (Node, Express & React)
 				</div>
 				<div class="skill_progress">
-				  <span style="width: 85%;"></span>
+				  <span style="width: 83%;"></span>
 				</div>
-				<div class="skill_per">85%</div>
+				<div class="skill_per">83%</div>
 			  </li>
 			  <li>
 				  <div class="skill_name">
 				  UI/UX Designing
 				  </div>
 				  <div class="skill_progress">
-					<span style="width: 55%;"></span>
+					<span style="width: 40%;"></span>
 				  </div>
-				  <div class="skill_per">55%</div>
+				  <div class="skill_per">40%</div>
 			  </li>
 			  <li>
 				<div class="skill_name">
 				  Data Structure
 				</div>
 				<div class="skill_progress">
-				  <span style="width: 97%;"></span>
+				  <span style="width: 95%;"></span>
 				</div>
-				<div class="skill_per">97%</div>
+				<div class="skill_per">95%</div>
 			  </li>
 			  <li>
 				<div class="skill_name">
-				  Word & Powerpoint
+				  Word, Powerpoint & Excel
 				</div>
 				<div class="skill_progress">
 				  <span style="width: 85%;"></span>
 				</div>
 				<div class="skill_per">85%</div>
-              </li>
-              <li>
-				<div class="skill_name">
-				  Illustrator
-				</div>
-				<div class="skill_progress">
-				  <span style="width: 50%;"></span>
-				</div>
-				<div class="skill_per">50%</div>
-			  </li>
+        </li>
 			</ul>
 		  </div>
     <div class="resume_item resume_work">
