--- a/_includes/web-resume.html
+++ b/_includes/web-resume.html
@@ -60,10 +60,12 @@
 				 </div>
 				 <ul>
 					 <li>• Public Speaking </li>
-					 <li>• Problem Solving </li>
 					 <li>• Leadership </li>
+					 <li>• Creative Writing </li>
+					 <li>• Problem Solving </li>
 					 <li>• Interpersonal Communication</li>
 					 <li>• Decision Making</li>
+					 <li>• Proofreading</li>
 					 <li>• Strategic Thinking</li>
 					 <!-- <li>• Diligence</li> -->
 				 </ul>
@@ -74,7 +76,7 @@
     <div class="resume_item resume_about">
         <div class="title">
 					<p class="bold" style="font-size:35px;">Nazmul Islam Ananto</p><br><br>
-					<p class="regular" style="font-size:20px;"> 1st Year Undergraduate </p>
+					<p class="regular" style="font-size:20px;"> 4th Year Undergraduate, CSE, BUET </p>
          </div>
     </div>
 		<div class="resume_item resume_education">
@@ -84,10 +86,10 @@
          <br>
 			<ul>
 						<li>
-								<div class="date">2019-2022 &emsp;&nbsp;&nbsp;</div>
+								<div class="date">2019-2024 &emsp;&nbsp;&nbsp;</div>
 								<div class="info">
 										 <p class="semi-bold">Computer Science and Engineering<br> Bangladesh University of Engineering and Technology</p>
-									<p>Enrolled in BS Program <br> Currently in 2nd Semester (3.98 CGPA)</p>
+									<p>Enrolled in BSc Program <br> Currently in 7th Semester</p>
 								</div>
 						</li>
 						<li>
@@ -117,55 +119,64 @@
 				  C/C++
 				</div>
 				<div class="skill_progress" >
+				  <span style="width: 92%;"></span>
+				</div>
+				<div class="skill_per">92%</div>
+			  </li>
+			  <li>
+				<div class="skill_name">
+				  Java
+				</div>
+				<div class="skill_progress">
 				  <span style="width: 90%;"></span>
 				</div>
 				<div class="skill_per">90%</div>
 			  </li>
+        <li>
+          <div class="skill_name">
+            Python
+          </div>
+          <div class="skill_progress">
+            <span style="width: 70%;"></span>
+          </div>
+          <div class="skill_per">70%</div>
+          </li>
 			  <li>
 				<div class="skill_name">
-				  Python
+				  Web Development (Express & React)
 				</div>
 				<div class="skill_progress">
-				  <span style="width: 70%;"></span>
+				  <span style="width: 83%;"></span>
 				</div>
-				<div class="skill_per">70%</div>
-			  </li>
-			  <li>
-				<div class="skill_name">
-				  Web Development
-				</div>
-				<div class="skill_progress">
-				  <span style="width: 60%;"></span>
-				</div>
-				<div class="skill_per">60%</div>
+				<div class="skill_per">83%</div>
 			  </li>
 			  <li>
 				  <div class="skill_name">
-				  Web Designing
+				  Database
 				  </div>
 				  <div class="skill_progress">
-					<span style="width: 45%;"></span>
+					<span style="width: 82%;"></span>
 				  </div>
-				  <div class="skill_per">45%</div>
+				  <div class="skill_per">82%</div>
 			  </li>
 			  <li>
 				<div class="skill_name">
 				  Data Structure
 				</div>
 				<div class="skill_progress">
-				  <span style="width: 40%;"></span>
+				  <span style="width: 95%;"></span>
 				</div>
-				<div class="skill_per">40%</div>
+				<div class="skill_per">95%</div>
 			  </li>
 			  <li>
 				<div class="skill_name">
-				  MS Word / Powerpoint
+				  Word, Powerpoint & Excel
 				</div>
 				<div class="skill_progress">
-				  <span style="width: 70%;"></span>
+				  <span style="width: 85%;"></span>
 				</div>
-				<div class="skill_per">70%</div>
-			  </li>
+				<div class="skill_per">85%</div>
+        </li>
 			</ul>
 		  </div>
     <div class="resume_item resume_work">
@@ -177,16 +188,24 @@
                 <div class="date">Current &emsp;&emsp;&emsp;&emsp;</div>
                 <div class="info">
                      <p class="semi-bold">Volunteer, Buet System Analysis, Design and Development Community</p>
-                  <p >Content Writer</p>
+                  <p >Content Writer, Web Developer</p>
                 </div>
             </li>
             <li>
               <div class="date"> Former &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</div>
               <div class="info">
-                     <p class="semi-bold">President of Writing and Publication, Notre Dame English Club</p>
-                  <p>Worked as an Editor in 8 publications, adjudicated 5+ competitions, organized 3 National English Carnivals and supervised over 100 volunteers in two of them, arranged more than 12 Intra College Workshops, Seminars and Competitions, managed more than 22 sponsors for the club with a monetary value of approximately 1.4 million. All that in less than 3 years.</p><br>
-										<p class="semi-bold">Volunteer, Ideal Debating Club</p>
-							 		<p>Worked as a Sub-Editor on a publication. Part-time debater.</p>
+                    <p class="semi-bold">President of Writing and Publication, Notre Dame English Club</p>
+                        <p>Worked as an Editor in 8 publications, adjudicated 5+ competitions, organized 3 National English Carnivals 
+                            and supervised over 100 volunteers in two of them, arranged more than 12 Intra College Workshops, Seminars 
+                            and Competitions, managed more than 22 sponsors for the club with a monetary value of approximately 1.4 million. 
+                            All that in less than 3 years.<br>
+                            Publications : Odyssey 5th Edition (Aug 2019), The Glowing Wick 2019 (Feb 2019), Odyssey 4th Edition (Jul 2018), 
+                            The Glowing Wick 2018 (Feb 2018), Odyssey 3rd Edition (May 2017)                            
+                        </p><br>
+                    <p class="semi-bold">Volunteer, Ideal Debating Club</p>
+                        <p>Worked as a Sub-Editor on a publication. Part-time debater.<br>
+                            Publications : Oritro 11th Edition (2016)
+                        </p>
                 </div>
             </li>
         </ul>
