--- a/_includes/web-resume.html
+++ b/_includes/web-resume.html
@@ -76,7 +76,7 @@
     <div class="resume_item resume_about">
         <div class="title">
 					<p class="bold" style="font-size:35px;">Nazmul Islam Ananto</p><br><br>
-					<p class="regular" style="font-size:20px;"> 4th Year Undergraduate, CSE, BUET </p>
+					<p class="regular" style="font-size:20px;"> 3rd Year Undergraduate, CSE, BUET </p>
          </div>
     </div>
 		<div class="resume_item resume_education">
@@ -86,10 +86,10 @@
          <br>
 			<ul>
 						<li>
-								<div class="date">2019-2024 &emsp;&nbsp;&nbsp;</div>
+								<div class="date">2019-2023 &emsp;&nbsp;&nbsp;</div>
 								<div class="info">
 										 <p class="semi-bold">Computer Science and Engineering<br> Bangladesh University of Engineering and Technology</p>
-									<p>Enrolled in BSc Program <br> Currently in 7th Semester</p>
+									<p>Enrolled in BSc Program <br> Currently in 6th Semester</p>
 								</div>
 						</li>
 						<li>
