Update Gemfile and Gemfile.lock and resume

--- a/_includes/web-resume.html
+++ b/_includes/web-resume.html
@@ -61,7 +61,7 @@
 				 <ul>
 					 <li>• Public Speaking </li>
 					 <li>• Leadership </li>
-					 <li>• Creative Writing </li>
+					 <!-- <li>• Creative Writing </li> -->
 					 <li>• Problem Solving </li>
 					 <li>• Interpersonal Communication</li>
 					 <li>• Decision Making</li>
@@ -75,8 +75,8 @@
   <div class="resume_right">
     <div class="resume_item resume_about">
         <div class="title">
-					<p class="bold" style="font-size:35px;">Nazmul Islam Ananto</p><br><br>
-					<p class="regular" style="font-size:20px;"> 3rd Year Undergraduate, CSE, BUET </p>
+					<p class="bold" style="font-size:30px;">Md. Nazmul Islam Ananto</p><br><br>
+					<p class="regular" style="font-size:20px;"> 4th Year Undergraduate, CSE, BUET </p>
          </div>
     </div>
 		<div class="resume_item resume_education">
@@ -86,10 +86,10 @@
          <br>
 			<ul>
 						<li>
-								<div class="date">2019-2023 &emsp;&nbsp;&nbsp;</div>
+								<div class="date">2019-2024 &emsp;&nbsp;&nbsp;</div>
 								<div class="info">
 										 <p class="semi-bold">Computer Science and Engineering<br> Bangladesh University of Engineering and Technology</p>
-									<p>Enrolled in BSc Program <br> Currently in 6th Semester</p>
+									<p>Enrolled in BSc Program <br> Currently in last Semester with a CGPA of 3.90</p>
 								</div>
 						</li>
 						<li>
@@ -137,9 +137,9 @@
             Python
           </div>
           <div class="skill_progress">
-            <span style="width: 70%;"></span>
+            <span style="width: 87%;"></span>
           </div>
-          <div class="skill_per">70%</div>
+          <div class="skill_per">87%</div>
           </li>
 			  <li>
 				<div class="skill_name">
@@ -164,9 +164,9 @@
 				  Data Structure
 				</div>
 				<div class="skill_progress">
-				  <span style="width: 95%;"></span>
+				  <span style="width: 90%;"></span>
 				</div>
-				<div class="skill_per">95%</div>
+				<div class="skill_per">90%</div>
 			  </li>
 			  <li>
 				<div class="skill_name">
