updated resume with FIR inc

--- a/_includes/web-resume.html
+++ b/_includes/web-resume.html
@@ -251,6 +251,17 @@
 						</div>
 					</li>
 					<li>
+						<!-- <div class="date">Red Light Green Light</div> -->
+						<div class="info">
+							<p class="semi-bold">- Red Light Green Light</p>
+							<!-- <p class="semi-bold">[Microcontroller Project]</p> -->
+							<p align="justify">A Traffic Light Controller with adaptive car count and train detection. Developed with
+								Arduino.</p>
+							<a href="https://youtu.be/9mWLkRmKQEA" target="_blank">[Video]</a>
+							<a href="https://github.com/niananto/red-light-green-light" target="_blank">[Code]</a>
+						</div>
+					</li>
+					<li>
 						<!-- <div class="date">Withered Away&emsp;&emsp;&emsp;&emsp;</div> -->
 						<div class="info">
 							<p class="semi-bold">- Withered Away</p>
@@ -264,14 +275,13 @@
 						</div>
 					</li>
 					<li>
-						<!-- <div class="date">Red Light Green Light</div> -->
+						<!-- <div class="date">Four In A Row</div> -->
 						<div class="info">
-							<p class="semi-bold">- Red Light Green Light</p>
+							<p class="semi-bold">- Four In A Row</p>
 							<!-- <p class="semi-bold">[Microcontroller Project]</p> -->
-							<p align="justify">A Traffic Light Controller with adaptive car count and train detection. Developed with
-								Arduino.</p>
-							<a href="https://youtu.be/9mWLkRmKQEA" target="_blank">[Video]</a>
-							<a href="https://github.com/niananto/red-light-green-light" target="_blank">[Code]</a>
+							<p align="justify">The game 'Connect 4' developed with C++ in iGraphics</p>
+							<a href="https://github.com/niananto/FIR-for-everyone" target="_blank">[Game]</a>
+							<a href="https://github.com/niananto/four-in-a-row" target="_blank">[Code]</a>
 						</div>
 					</li>
 				</ul>
