Update contact information and add experience and internship sections

--- a/_includes/web-resume.html
+++ b/_includes/web-resume.html
@@ -40,7 +40,7 @@
 								<i class="fas fa-at"></i>
 							</div>
 							<div class="data">
-								nazmulislamananto@gmail.com
+								<a href="mailto:nazmulislamananto@gmail.com">nazmulislamananto@gmail.com</a>
 							</div>
 						</li>
 						<li>
@@ -48,7 +48,7 @@
 								<i class="fab fa-linkedin"></i>
 							</div>
 							<div class="data">
-								/nazmulislamananto
+								<a href="https://www.linkedin.com/in/nazmulislamananto/" target="_blank">/nazmulislamananto</a>
 							</div>
 						</li>
 						<li>
@@ -56,7 +56,7 @@
 								<i class="fab fa-github"></i>
 							</div>
 							<div class="data">
-								/niananto
+								<a href="https://www.github.com/niananto" target="_blank">/niananto</a>
 							</div>
 						</li>
 						<li>
@@ -64,7 +64,7 @@
 								<i class="fas fa-globe"></i>
 							</div>
 							<div class="data">
-								niananto.github.io
+								<a href="https://niananto.github.io" target="_blank">niananto.github.io</a>
 							</div>
 						</li>
 					</ul>
@@ -83,23 +83,23 @@
 					</p>
 				</div>
 				<br>
-				<div class="resume_item resume_strengths">
+				<!-- <div class="resume_item resume_strengths">
 					<div class="title">
 						<p class="bold">Strengths</p>
 					</div>
 					<ul>
 						<li>• Public Speaking </li>
 						<li>• Leadership </li>
-						<!-- <li>• Creative Writing </li> -->
+						<li>• Creative Writing </li>
 						<li>• Problem Solving </li>
 						<li>• Interpersonal Communication</li>
 						<li>• Decision Making</li>
 						<li>• Proofreading</li>
 						<li>• Strategic Thinking</li>
-						<!-- <li>• Diligence</li> -->
+						<li>• Diligence</li>
 					</ul>
 				</div>
-				<br>
+				<br> -->
 				<div class="resume_item resume_strengths">
 					<div class="title">
 						<p class="bold">Skills</p>
@@ -119,6 +119,39 @@
 					<p class="bold" style="font-size:30px;">Md. Nazmul Islam Ananto</p><br><br>
 					<p class="regular" style="font-size:20px;"> 4th Year Undergraduate, CSE, BUET </p>
 				</div>
+			</div>
+			<div class="resume_item resume_experience">
+				<div class="title">
+					<p class="bold">Experience</p>
+				</div>
+				<ul>
+					<li>
+						<div class="date">2022-Current &emsp;&emsp;&nbsp;</div>
+						<div class="info">
+							<p class="semi-bold">Research Assistant, IWFM, BUET</p>
+							<p align="justify">Working on an Early Warning System for River Erosion-prone areas.
+								Developed the Web Application for this purpose.
+							</p>
+							<a href="https://iwfm.buet.ac.bd/site/reserach_interfunded/development-of-web-application-of-early-warning-system-for-river-erosion-ews-re/" 
+								target="_blank">[Details of the Project]</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="resume_item resume_internship">
+				<div class="title">
+					<p class="bold">Internship</p>
+				</div>
+				<ul>
+					<li>
+						<div class="date">May - <br>June 2023 </div>
+						<div class="info">
+							<p class="semi-bold">at <a href="https://www.erainfotechbd.com/">Era-InfoTech Ltd</a></p>
+							<p align="justify">Completed the Internship virtually on the <a href="https://www.vinternship.org/">vinternship.org</a> platform, organized by eSRD Lab, BUET.</p>
+							<a href="https://github.com/niananto/vintern-business-data-analysis" target="_blank">[Code]</a>
+						</div>
+					</li>
+				</ul>
 			</div>
 			<div class="resume_item resume_education">
 				<div class="title">
@@ -295,9 +328,8 @@
 						<div class="date">Current &emsp;&emsp;&emsp;&emsp;&emsp;</div>
 						<div class="info">
 							<p class="semi-bold">Director (Marketing & Communication), Buet Cyber Security Club</p>
-							<p>Content Writer, Web Developer</p><br>
-							<p class="semi-bold">Volunteer, Buet System Analysis, Design and Development Community
-								(BSADD)</p>
+							<p>Social Media Manager, CTF & Seminars' Organizer</p><br>
+							<p class="semi-bold">Volunteer, Buet System Analysis, Design and Development Community (BSADD)</p>
 							<p>Content Writer, Web Developer</p>
 						</div>
 					</li>
