--- a/_includes/web-resume.html
+++ b/_includes/web-resume.html
@@ -144,11 +144,26 @@
 				</div>
 				<ul>
 					<li>
-						<div class="date">May - <br>June 2023 </div>
+						<div class="date">May -<br>June<br>2023&emsp;&emsp;&emsp;</div>
 						<div class="info">
-							<p class="semi-bold">at <a href="https://www.erainfotechbd.com/">Era-InfoTech Ltd</a></p>
+							<p class="semi-bold">Machine Learning Intern, <a href="https://www.erainfotechbd.com/">Era-InfoTech Ltd</a></p>
 							<p align="justify">Completed the Internship virtually on the <a href="https://www.vinternship.org/">vinternship.org</a> platform, organized by eSRD Lab, BUET.</p>
 							<a href="https://github.com/niananto/vintern-business-data-analysis" target="_blank">[Code]</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="resume_item resume_thesis">
+				<div class="title">
+					<p class="bold">Undergrad Thesis</p>
+				</div>
+				<ul>
+					<li>
+						<div class="date">2023-Current&emsp;</div>
+						<div class="info">
+							<p class="semi-bold">Under Supervision of <a href="https://cse.buet.ac.bd/faculty_list/detail/eunus">Mohammed Eunus Ali</a></p>
+							<p align="justify">Can Large Language Models Solve Spatial Popular Path Problem?</p>
+							<p align="justify">Evaluate LLMs' accuracy in solving geospatial learning problems. Create an enhanced framework to improve LLMs' proficiency in addressing such challenges.</p>
 						</div>
 					</li>
 				</ul>
