--- a/_includes/search-lunr.html
+++ b/_includes/search-lunr.html
@@ -149,7 +149,7 @@ function lunr_search(term) {
 
 <form action="" onSubmit="return lunr_search(document.getElementById('lunrsearch').value);">
   <input type="search" class="form-control" id="lunrsearch" name="q" maxlength="255" value="" placeholder="What are you looking for">
-  <i class="fa fa-search"></i>
+<button type="submit" class="fa fa-search"></button>
 </form>
 <div id="lunrsearchresults">
     <ul></ul>
